[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/Animations/MenuSelect.tres" type="Animation" id=1]
[ext_resource path="res://Menu/UIThemeSmall.tres" type="Theme" id=2]
[ext_resource path="res://Menu/DualButton.gd" type="Script" id=3]
[ext_resource path="res://Menu/UITheme.tres" type="Theme" id=4]
[ext_resource path="res://Menu/Animations/MenuHover.tres" type="Animation" id=5]

[node name="DualButton" type="MarginContainer"]
margin_right = 720.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 95 )
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 720.0
margin_bottom = 1080.0
theme = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 720.0
margin_bottom = 1080.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 720.0
margin_bottom = 1080.0
mouse_filter = 2

[node name="Text" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 720.0
margin_bottom = 53.0
theme = ExtResource( 4 )
text = "Chapter 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 720.0
margin_bottom = 98.0
theme = ExtResource( 2 )
text = "Shit Yourself"
align = 2
valign = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MenuHover = ExtResource( 5 )
anims/MenuSelect = ExtResource( 1 )

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
